feat: add join, leave for group chat
